# django_ggrksok

./: db.sqlite3  install_dep.sh  pyproject.toml  start_project.sh
backend/: .gitignore  main.py  req.txt
backend/databaseLogic/: databaseConnect.py
backend/databaseLogic/models/: installModel.py  userModel.py
backend/databaseLogic/queryiesToDB/: installQuery.py  userQuery.py
backend/routes/: mainRouter.py
backend/routes/parsing/: .route_installing.py.swp  route_installing.py
backend/routes/users/: route_users.py
backend/tests/: conftest.py
django_project/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: .App.js.swo  .App.js.swp  App.js  index.css  index.js
frontend/src/components/: .Layout.jsx.swm  .Layout.jsx.swn  .Layout.jsx.swo  .Layout.jsx.swp  .fileItem.jsx.swo  .fileItem.jsx.swp  .filesList.js.swo  .filesList.js.swp  .formComponent.js.swn  .formComponent.js.swo  .formComponent.js.swp  .historyForm.js.swp  .showFolderFiles.js.swp  Layout.jsx  fileItem.jsx  filesList.js  formComponent.js  historyForm.js  loginForm.jsx  registrationForm.jsx  showFolderFiles.js
frontend/src/pages/: historyPage.js  loginPage.jsx  (+2 more)
polls/: NetrwTreeListing  admin.py  files_services.py  models.py  urls.py  users_services.py  views.py
polls/migrations/: 0001_initial.py  0002_post_thumb.py  0002_user_email.py  0003_alter_user_name.py  0004_alter_user_email.py  0005_alter_insta_profiles_name.py
templates/: .login.html.swp  checkbox.html  form.html  form_registr.css  login.html  registration.html  show_profiles.html  ytb.html
(+6 files in other folders)
