[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["GGerbit <gosha2007naz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-background-tasks = "^1.2.5"
Pillow = "^8.4.0"
yt-dlp = "^2021.12.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
